--- a/assets/javascript/airquill.js.less
+++ b/assets/javascript/airquill.js.less
@@ -5,4 +5,7 @@
  * AirQuill v2.0.0 (https://airquill.io/)
  */
 
+@import (inline) "airquill-theme.js";
+@import (inline) "airquill-preferences.js";
 @import (inline) "airquill-nav.js";
+@import (inline) "airquill-core.js";
