--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,15 +1,24 @@
-<div class="row small">
-	<div class="col-md-12">
-		<hr />
-<!--		<img src="/assets/images/airquill-icon.png" class="pull-right"/>-->
-		<p>
-			Copyright &copy; 2014-2019 <a href="/about/" class="footer-link">Tiese Barrell</a>. All rights reserved.
-		</p>
-		<p>
-			Follow posts with <a href="/feed.xml" class="footer-link"><i class="fa fa-rss">&nbsp;</i>RSS</a> or <a href="/atom.xml" class="footer-link"></span><i class="fa fa-rss">&nbsp;</i>Atom</a>.
-		</p>
-		<p>
-			Published using <a href="http://jekyllrb.com" class="footer-link">Jekyll</a> (v. {{ jekyll.version }}) on {{site.time | date_to_long_string}}
-		</p>
+<footer>
+	<div class="container">
+		<div class="row">
+			<div class="col icon">
+			</div>
+		</div>
+
+		<div class="row footer-content">
+			<div class="col">
+				<p>
+					<i class="fas fa-copyright">&nbsp;&nbsp;&nbsp;</i>Copyright &copy; 2014-2019 <a href="/about/">Tiese Barrell</a>. All rights reserved.
+				</p>
+				<p>
+					<i class="fas fa-rss-square">&nbsp;&nbsp;&nbsp;</i>Follow posts with <a href="/feed.xml">RSS</a> or <a href="/atom.xml">Atom</a>.
+				</p>
+				<p>
+					<i class="fas fa-code">&nbsp;&nbsp;&nbsp;</i>Published using <a href="http://jekyllrb.com">Jekyll</a> (v. {{ jekyll.version }}) on {{site.time | date_to_long_string}}
+				</p>
+			</div>
+		</div>
 	</div>
-</div>
+</footer>
+
+
