--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,8 @@
 <!--  <link rel="stylesheet" type="text/css" media="screen" href="/assets/styles/pygments/github.css">-->
   <link rel="stylesheet" type="text/css" media="screen" href="/assets/styles/airquill.min.css">
 
+  <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="/assets/images/favicon.ico">
+
   <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,300,700|Lato:100,300|Roboto:400,400italic,700|Montserrat:400,700|Roboto+Slab:400,300,700" rel="stylesheet" type="text/css">
     
   <!-- RSS -->
