--- a/assets/styles/airquill.theme.light.less
+++ b/assets/styles/airquill.theme.light.less
@@ -1,6 +1,19 @@
 body.theme-light {
+
+  main {
+    color: @nearblack;
+
+    a {
+      color: @grey-middle;
+    }
+
+    img.profile {
+      border-color: @grey-light;
+    }
+  }
+
   nav.main {
-    background: url(@square-pattern-light) repeat;
+    background: url(@square-pattern-dark) repeat;
     padding: 9px;
 
     li a.nav-link {
@@ -45,8 +58,8 @@ body.theme-light {
   }
 
   footer {
-    color: @grey-middle;
-    background-color: @grey-light-ultra;
+    color: @grey-light-ultra;
+    background-color: @nearblack;
 
     a {
       color: @yellow;
