--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,29 +3,20 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>
-    {% if page.layout == 'post' %}
-      {{ page.title }} :: 
+    {% if page.layout != 'index' %}
+      {{ page.title }} |
     {% endif %}
     {{ site.name }}
   </title>
 
-<!--  <link rel="stylesheet" type="text/css" media="screen" href="/assets/styles/pygments/github.css">-->
+<!-- TODO <link rel="stylesheet" type="text/css" media="screen" href="/assets/styles/pygments/github.css">-->
   <link rel="stylesheet" type="text/css" media="screen" href="/assets/styles/airquill.min.css">
 
   <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="/assets/images/favicon.ico">
 
   <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,300,700|Lato:100,300|Roboto:400,400italic,700|Montserrat:400,700|Roboto+Slab:400,300,700" rel="stylesheet" type="text/css">
-    
-  <!-- RSS -->
+
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/feed.xml">
-  	
-<!--  <script type="text/javascript">-->
-<!--	  var site = "{{ site.url }}";-->
-
-<!--	  function googleSiteSearch(scope) {-->
-<!--		 scope.q.value = scope.q.value + " site:" + site;-->
-<!--	  }-->
-<!--  </script>-->
   	
  </head>
